# AlgoTools

./: README.md  settings.gradle  test.txt
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/: dumpmm
app/src/main/assets/armeabi-v7a/: dumpmm
app/src/main/assets/x86/: dumpmm
app/src/main/assets/x86_64/: dumpmm
app/src/main/cpp/: CMakeLists.txt  hash_calculator.cpp  hash_calculator.h  md5.cpp  md5.h  memory_utils.cpp  memory_utils.h  native-lib.cpp  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha384.h  sha512.h  string_search.cpp  string_search.h
app/src/main/java/com/ghostxx/algotools/: MainActivity.java  architecture.md
app/src/main/java/com/ghostxx/algotools/fragment/: HashAnalysisFragment.java
app/src/main/java/com/ghostxx/algotools/model/: AnalysisResult.java  AppInfo.java
app/src/main/java/com/ghostxx/algotools/repository/: HashRepository.java
app/src/main/java/com/ghostxx/algotools/service/: FloatingDumpService.java  FloatingWindowManager.java  (+1 more)
app/src/main/res/drawable/: plaintext_label_background.xml
app/src/main/res/layout/: activity_main.xml  component_action_button.xml  component_input_field.xml  component_result_card.xml  fragment_hash_analysis.xml  item_app_info.xml  layout_floating_dump.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml  themes.xml  type.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
release/v1.1/: RELEASE_NOTES.md  RELEASE_PROCESS.txt
(+32 files in other folders)
